Fixing Avatar Spacing, Float

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ form.wcorg-mailchimp label {
 	padding-top: 4%;
 }
 
-.wcorg-organizer .avatar,.wcorg-speaker .avatar {
+.wcorg-organizer .avatar,.wcorg-speaker .avatar, .avatar {
 	float: left;
 	margin: 4%;
 	position: absolute;
